---
Veretino 0.7.0
What's new:
* Ability to add and edit comments to databases.
* The 'Verified' time stamp is now considered obsolete after moving the folder.
* Fixed display of size and speed (added missing space).

Internal changes:
* The QMicroz lib has become a submodule and no longer requires additional build.

---
Veretino 0.6.3
* Fixed the impossibility of switching to the file system due to refusal to save data.
* Fixed the update of the verification date in the presence of moved items.
* Fixed the erroneous appearance of the 'Forget all changes' menu action (newly created, but not saved database).
* Fixed the adding of a newly created DB with a custom location to the list of recent ones.

---
Veretino 0.6.2
* Improved display of the subfolder content statuses.
* The names of some item statuses are simplified.
* Fixed the false response to filtered symlinks during parsing.
* Folder Contents dialog: if all files are selected, the red 'no files' label is no longer displayed.

---
Veretino 0.6.1
Compatibility with older OS, such as Ubuntu 22.04, has been implemented.

---
Veretino 0.6.0
What's new:
* Improved database storage format. Now files with the *.ver extension are compressed.
* When working with non-writable folders, the location of the database file is now user-selectable.
    (previously it was saved to the Desktop)
* More reliable database saving process.
* More accurate detection of the presence of a checksum string in the clipboard.
* Added support for checking using the outdated (but still used) MD5 algorithm.
* Added the ability to exclude shortcuts and symbolic links from the list of files.
* Added the ability to paste checksums from the clipboard into the database. (For advanced users only!)
    Available for 'New-status' items if the option is enabled in the settings.

Internal changes:
* The way of processing JSON file data has been redesigned.
* The file filtering system now has attributes.
* Improved processing of the file types list.